2009-10-06  Kelly Norton  <knorton@google.com>

Reviewed by Timothy Hatcher.

        Fixes <https://bugs.webkit.org/show_bug.cgi?id=30028>
        Multiple calls to SetFrontendProxyObject can leave an InspectorTimelineAgent with an invalid
        InspectorFrontend.

        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::setFrontendProxyObject): Adds a check for an existing timeline agent.

Canonical link: https://commits.webkit.org/40763@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49204 268f45cc-cd09-0410-ab3c-d52691b4dbfc