WebCore/inspector/InspectorController.cpp
@@ -553,7 +553,7 @@ void InspectorController::setFrontendProxyObject(ScriptState* scriptState, Scrip
     m_domAgent = new InspectorDOMAgent(m_frontend.get());
 
     Setting timelineEnabled = setting(timelineEnabledSettingName);
-    if (timelineEnabled.type() == Setting::BooleanType && timelineEnabled.booleanValue())
+    if (m_timelineAgent.get() || (timelineEnabled.type() == Setting::BooleanType && timelineEnabled.booleanValue()))
         m_timelineAgent = new InspectorTimelineAgent(m_frontend.get());
 }
 
